--- a/src/pages/Podcasts.module.css
+++ b/src/pages/Podcasts.module.css
@@ -1,5 +1,5 @@
 .podcasts {
-  padding: 36px 0;
+  padding: 14px 0 36px;
 }
 
 .header {
